tests/paczka1/small_fuzzy/66168919.err
Error in line 3: UwDRk9wdP S969 42,0
Error in line 6: IJH9 A902 96,4
Error in line 12: A902 S230 43,12
Error in line 8: IJH9 A865 61,8
Error in line 15: 8AW0JFd39 A865 5,7
